# regie

./: .gitignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yml
api/: Cargo.toml
api/migrations/: 001_initial.sql  002_claude_md.sql
api/src/: .env.example  anthropic.rs  db.rs  github.rs  ingestion.rs  lib.rs  main.rs
api/src/parsers/: hardening.rs  mod.rs  scorecard.rs
shared/: Cargo.toml
shared/src/: types.rs
web/: Cargo.toml  index.html
web/src/: api.rs  lib.rs  main.rs  style.css
web/src/views/: commits.rs  deferred.rs  mod.rs  recommendation.rs  repo_dashboard.rs  repo_list.rs  scorecard.rs  tasks.rs
