[workspace]
members = ["api", "web", "shared"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres",
    "chrono", "uuid", "json"
] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
anyhow = "1"
