[package]
name = "regie-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-net = { version = "0.6", features = ["http"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regie-shared = { path = "../shared" }

[lib]
crate-type = ["cdylib", "rlib"]
